# stylusport

./: .gitignore  Cargo.toml  README.md  justfile  lcov-anchor_parser.info
crates/anchor_normalizer/: Cargo.toml
crates/anchor_normalizer/src/: error.rs  lib.rs
crates/anchor_normalizer/src/model/: account.rs  instruction.rs  mod.rs  program.rs  validation.rs
crates/anchor_normalizer/src/normalization/: account.rs  inference.rs  instruction.rs  mod.rs  program.rs  validation.rs
crates/anchor_normalizer/tests/: helpers.rs  normalization_tests.rs
crates/anchor_normalizer/tests/fixtures/: mod.rs
crates/anchor_parser/: Cargo.toml
crates/anchor_parser/src/: error.rs  lib.rs  main.rs  parser.rs
crates/anchor_parser/src/display/: ast.rs  constants.rs  function.rs  mod.rs  module.rs  predicates.rs  structure.rs  utils.rs
crates/anchor_parser/src/display/formatting/: mod.rs  strings.rs
crates/anchor_parser/src/model/: account.rs  instruction.rs  mod.rs  program.rs
crates/anchor_parser/src/parser/: convert.rs  mod.rs  parse.rs  predicates.rs
crates/anchor_parser/tests/: example_programs.rs  test_fixtures.rs
crates/anchor_parser/tests/fixtures/counter/: lib.rs
crates/anchor_parser/tests/fixtures/token_vault/: lib.rs
crates/explain_engine/: Cargo.toml
crates/ir_builder/: Cargo.toml
crates/stylus_generator/: Cargo.toml
crates/stylusport/: Cargo.toml
crates/stylusport/src/: cli.rs  config.rs  error.rs  main.rs  output.rs
crates/stylusport/src/commands/: mod.rs  normalize.rs  parse.rs
crates/stylusport/tests/: cli_normalize_tests.rs  cli_tests.rs
crates/stylusport/tests/snapshots/: cli_normalize_tests__normalize_file_json.snap  cli_normalize_tests__normalize_file_yaml.snap  cli_tests__parse_file_json.snap  cli_tests__parse_file_yaml.snap
crates/utils/: Cargo.toml
crates/utils/src/: fmt.rs
docs/: code_organization.md
docs/specs/: 0000-vision.md  0001-architecture-pipeline.md  0002-ir-schema.md  0003-testing-strategy.md  0004-cli.md  0005-roadmap-parser.md  0005-roadmap.md
examples/hello_world/: lib.rs
