[package]
name = "anchor_normalizer"
version = "0.1.0"
edition = "2021"
description = "Semantically normalize Anchor programs for IR generation"
license = "MIT"

[dependencies]
anchor_parser = { path = "../anchor_parser" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0.12"
chrono = "0.4"

[dev-dependencies]
insta = "1.8"