[package]
name = "anchor_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0"
insta = { version = "1.34.0", features = ["yaml"] }
anchor-syn = { git = "https://github.com/coral-xyz/anchor", branch = "master" }

[dev-dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0.100", features = [
    "full",
] } # Ensure this version matches with anchor-syn's version
