[package]
name = "stylusport"
version = "0.1.0"
edition = "2021"
description = "A tool to translate Solana Anchor programs to Stylus-compatible Rust"
authors = ["Scanworks Team"]
license = "MIT"

[[bin]]
name = "stylusport"
path = "src/main.rs"

[dependencies]
# Command-line argument parsing
clap = { version = "4.0", features = ["derive"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
# Error handling
thiserror = "2.0.12"
anyhow = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Path handling
camino = "1.1.4"
# For testing
insta = "1.28"

# Internal crates
anchor_parser = { path = "../anchor_parser" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.3"
tempfile = "3.5"